--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,36 @@
-*.obj
-*.exe
-*.pdb
-*.user
-*.aps
-*.pch
-*.vspscc
-*_i.c
-*_p.c
-*.ncb
-*.suo
-*.tlb
-*.tlh
-*.bak
-*.cache
-*.ilk
-*.log*
-[Bb]in
-[Dd]ebug*/
-*.lib
-*.sbr
-obj/
-[Rr]elease*/
-_ReSharper*/
-[Tt]est[Rr]esult*
-.idea
-*.iml
-target
-*.jar
-*.dat
+#*.obj
+#*.exe
+#*.pdb
+#*.user
+#*.aps
+#*.pch
+#*.vspscc
+#*_i.c
+#*_p.c
+#*.ncb
+#*.suo
+#*.tlb
+#*.tlh
+#*.bak
+#*.cache
+#*.ilk
+#*.log*
+#[Bb]in
+#[Dd]ebug*/
+#*.lib
+#*.sbr
+#obj/
+#[Rr]elease*/
+#_ReSharper*/
+#[Tt]est[Rr]esult*
+#.idea
+#*.iml
+#target
+#*.jar
+#*.dat
+.idea/
+ib-agent/target/
+ib-framework/target/
+project/project/
+project/target/
+target/
